# Digital-Library-MCP

./: .gitignore  README.md  pyproject.toml
src/: book_tools.py  state.py
