[project]
name = "python-template"
version = "0.1.0"
description = "A standard template for a basic ML workflow."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.4.2",
]

[tool.ruff]
line-length = 107
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # Basic linting + import sorting
