[project]
name = "digital-library-mcp"
version = "0.1.0"
description = "MCP server for organizing a digital library of books."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastmcp",
    "ebooklib",
    "pymupdf",
]

[project.scripts]
digital-library = "src.book_tools:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 107
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # Basic linting + import sorting

[dependency-groups]
dev = [
    "ruff>=0.15.17",
]
